tests/NormalTests/paczka1/fuzzy1/65122824.err
Error in line 2: BSdaFJpxIR S310 39,2
Error in line 11: SlR9 A17 98,7
Error in line 18: SlR9 S922 59,6
Error in line 22: lo56Qi S3C0 82,3
Error in line 19: hTjrqw A17 88,4
Error in line 23: lo56Qi S310 234,6
Error in line 33: lo56Qi S550 2	,7
Error in line 30: lo56Qi S550 65,3
